# teoria_jogos

./: .gitignore  README.md  pyproject.toml
docs/: avaliacao_hipoteses.md  bases.md  referencias.md  relatorio_final.md
src/teoria_jogos/: __init__.py  cli.py
src/teoria_jogos/analysis/: __init__.py  reports.py
src/teoria_jogos/data/: __init__.py  b3.py  bcb.py  cvm.py  tesouro.py
src/teoria_jogos/models/: __init__.py  calibration.py
src/teoria_jogos/simulation/: __init__.py  baseline.py
tests/: test_bcb.py  test_data_sources.py  test_simulation.py
